started to style home page

--- a/recipes-list.html
+++ b/recipes-list.html
@@ -8,10 +8,39 @@
     <title>Bite by Me |  Recipes list</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Joti+One&family=Quicksand&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+    <header>
+        <nav class="menu">
+            <ul>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="recipes-list.html">Recipes</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div >
+            <a href="index.html" class="logo">
+            <div class="logo_mobile">
+                <h1>BITE by ME</h1>
+                <img src="images/cake.png" alt="Bite by me logo" class="logo_img">
+            </div>
+            <h2>IT'S SOMEONES BIRTHDAY SOMEWHERE</h2>
+            </a>
+        </div>
+    </main>
+    <footer>
+        <nav class="footer_menu">
+            <ul>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="recipes-list.html">Recipes</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </footer>
     
 </body>
 </html>
