--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,64 @@
     <title>Bite by Me | Contact us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Joti+One&family=Quicksand&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+    <header>
+        <nav class="menu">
+            <ul>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="recipes-list.html">Recipes</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div >
+            <a href="index.html" class="logo">
+            <div class="logo_mobile">
+                <h1>BITE by ME</h1>
+                <img src="images/cake.png" alt="Bite by me logo" class="logo_img">
+            </div>
+            <h2>IT'S SOMEONES BIRTHDAY SOMEWHERE</h2>
+            </a>
+        </div>
+        <div class="form">
+            <form>
+                <div class="input">
+                    <label>Name (required)</label>
+                    <input name="name" id="name"/>
+                    <div id="nameError"></div>
+                </div>
+                <div class="input">
+                    <label>Email</label>
+                    <input name="email" id="email"/>
+                    <div id="emailError"></div>
+                </div>
+                <div class="input">
+                    <label>Subject</label>
+                    <input name="subject" id="subject"/>
+                    <div id="subjectError"></div>
+                </div>
+                <div class="input">
+                    <label>Message</label>
+                    <textarea name="message" id="message"></textarea>
+                    <div id="messageError"></div>
+                </div>
+                <button>Send</button>
+            </form>
+        </div>
+    </main>
+    <footer>
+        <nav class="footer_menu">
+            <ul>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="recipes-list.html">Recipes</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </footer>
     
 </body>
 </html>
