--- a/index.html
+++ b/index.html
@@ -8,10 +8,68 @@
     <title>Bite by Me | Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Joti+One&family=Quicksand&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+    <header>
+        <nav class="menu">
+            <ul>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="recipes-list.html">Recipes</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div >
+            <a href="index.html" class="logo">
+            <div class="logo_mobile">
+                <h1>BITE by ME</h1>
+                <img src="images/cake.png" alt="Bite by me logo" class="logo_img">
+            </div>
+            <h2>IT'S SOMEONES BIRTHDAY SOMEWHERE</h2>
+            </a>
+        </div>
+        <section class="featured">
+
+        </section>
+        <section class="recipe__options">
+            <div class="cakes">
+                <a href="recipes-list.html">
+                <img src="images/cake2.png" alt="Drawn image of a cake slice">
+                <h3>Cakes</h3>
+                </a>
+            </div>
+            <div class="cakes">
+                <a href="recipes-list.html">
+                <img src="images/cupcake.png" alt="Drawn image of a cupcake">
+                <h3>Cupcakes</h3>
+                </a>
+            </div>
+            <div class="cakes">
+                <a href="recipes-list.html">
+                <img src="images/cookie.png" alt="Drawn image of a cookie">
+                <h3>Cookies</h3>
+                </a>
+            </div>
+            <div class="cakes">
+                <a href="recipes-list.html">
+                <img src="images/chocolate.png" alt="Drawn image of confections">
+                <h3>Confections</h3>
+                </a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <nav class="footer_menu">
+            <ul>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="recipes-list.html">Recipes</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </footer>
     
 </body>
 </html>
