--- a/about.html
+++ b/about.html
@@ -9,7 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Joti+One&family=Quicksand&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/d2a33a8755.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- Hotjar Tracking Code for my site -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:3487422,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
 </head>
 <body>
     <header>
@@ -20,6 +32,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <i class="fa-solid fa-magnifying-glass"></i>
     </header>
     <main>
         <div >
@@ -28,9 +41,20 @@
                 <h1>BITE by ME</h1>
                 <img src="images/cake.png" alt="Bite by me logo" class="logo_img">
             </div>
-            <h2>IT'S SOMEONES BIRTHDAY SOMEWHERE</h2>
+            <h2>IT'S SOMEONE'S BIRTHDAY SOMEWHERE</h2>
             </a>
         </div>
+        <section>
+            <div class="images">
+                <img src="images/close-up-woman-dusting-sugar-powder-strawberry-tart.jpg" alt="A woman dusting powdered sugar on a strawberry tart">
+                <img src="images/front-view-female-cook-rolling-out-dough-with-flour-dark-job-raw-dough-hotcake-bakery-pie-oven-pastry.jpg" alt="A woman dusting flower on a raw dough">
+            </div>
+            <div class="text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sint cupiditate quasi, itaque atque modi id necessitatibus fuga iusto distinctio numquam, eius iure temporibus? Distinctio sit facilis ipsam quam consequuntur adipisci minus, est error culpa, eius quidem. Laudantium nobis delectus exercitationem explicabo mollitia tempore quisquam aspernatur laborum reprehenderit voluptas nemo dolor at doloremque temporibus sit impedit, non quas placeat quod quaerat reiciendis veritatis rem dicta perspiciatis. Atque reprehenderit porro tenetur labore, ea perspiciatis! Natus cumque consequuntur doloremque. Sed praesentium laborum sapiente debitis, perspiciatis aliquid pariatur suscipit asperiores, natus dicta fugiat explicabo aliquam in beatae voluptatum ad. Delectus ut error tenetur?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit ad nihil minus hic eum eos similique cumque error dolorum quia nam nesciunt quas in repudiandae illum, dolorem earum excepturi? Iure exercitationem repellat nostrum nulla cum hic labore. Magnam deleniti expedita error eligendi fugiat quae libero soluta, quasi ducimus, delectus ab? Porro beatae inventore ipsam suscipit facilis quos voluptatum architecto. Error maiores eveniet eligendi dolor quae fuga voluptas expedita consequatur deleniti omnis consequuntur quo dolorem nisi, quos sint ratione distinctio blanditiis.</p>
+            </div>
+            <img src="images/close-up-hand-holding-strawberry.jpg" alt="A woman adding cut strawberries on top of chocolate slices with whipped cream" class="bottom_img">
+        </section>
     </main>
     <footer>
         <nav class="footer_menu">
@@ -40,6 +64,12 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <a href="index.html">
+            <div class="logo-footer">
+                <h4>BITE by ME</h4>
+                <img src="images/cake.png" alt="Bite by me logo" class="logo_img">
+            </div>
+        </a>
     </footer>
     
 </body>
