--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Joti+One&family=Quicksand&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/d2a33a8755.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- Hotjar Tracking Code for my site -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:3487422,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
 </head>
 <body>
     <header>
@@ -20,6 +32,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <i class="fa-solid fa-magnifying-glass"></i>
     </header>
     <main>
         <div >
@@ -28,32 +41,37 @@
                 <h1>BITE by ME</h1>
                 <img src="images/cake.png" alt="Bite by me logo" class="logo_img">
             </div>
-            <h2>IT'S SOMEONES BIRTHDAY SOMEWHERE</h2>
+            <h2>IT'S SOMEONE'S BIRTHDAY SOMEWHERE</h2>
             </a>
         </div>
+        <p class="contact">We would be happy to answer any questions you may have. So if you are wondering about something, leave us a message!</p>
         <div class="form">
             <form>
-                <div class="input">
-                    <label>Name (required)</label>
-                    <input name="name" id="name"/>
-                    <div id="nameError"></div>
+                <div class="column">
+                    <div class="input">
+                        <label>Name</label>
+                        <input name="name" id="name"/>
+                        <div id="nameError"></div>
+                    </div>
+                    <div class="input">
+                        <label>Email address</label>
+                        <input name="email" id="email"/>
+                        <div id="emailError"></div>
+                    </div>
+                    <div class="input">
+                        <label>Subject</label>
+                        <input name="subject" id="subject"/>
+                        <div id="subjectError"></div>
+                    </div>
                 </div>
-                <div class="input">
-                    <label>Email</label>
-                    <input name="email" id="email"/>
-                    <div id="emailError"></div>
+                <div class="column">
+                    <div class="input">
+                        <label>Message</label>
+                        <textarea name="message" id="message"></textarea>
+                        <div id="messageError"></div>
+                    </div>
+                    <button class="cta">Send</button>
                 </div>
-                <div class="input">
-                    <label>Subject</label>
-                    <input name="subject" id="subject"/>
-                    <div id="subjectError"></div>
-                </div>
-                <div class="input">
-                    <label>Message</label>
-                    <textarea name="message" id="message"></textarea>
-                    <div id="messageError"></div>
-                </div>
-                <button>Send</button>
             </form>
         </div>
     </main>
@@ -65,7 +83,13 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <a href="index.html">
+            <div class="logo-footer">
+                <h4>BITE by ME</h4>
+                <img src="images/cake.png" alt="Bite by me logo" class="logo_img">
+            </div>
+        </a>
     </footer>
-    
+    <script src="js/contact.js"></script>
 </body>
 </html>
