--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Joti+One&family=Quicksand&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/d2a33a8755.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- Hotjar Tracking Code for my site -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:3487422,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
 </head>
 <body>
     <header>
@@ -20,6 +32,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <i class="fa-solid fa-magnifying-glass"></i>
     </header>
     <main>
         <div >
@@ -28,10 +41,10 @@
                 <h1>BITE by ME</h1>
                 <img src="images/cake.png" alt="Bite by me logo" class="logo_img">
             </div>
-            <h2>IT'S SOMEONES BIRTHDAY SOMEWHERE</h2>
+            <h2>IT'S SOMEONE'S BIRTHDAY SOMEWHERE</h2>
             </a>
         </div>
-        <section class="featured">
+        <section class="carousel">
 
         </section>
         <section class="recipe__options">
@@ -60,6 +73,21 @@
                 </a>
             </div>
         </section>
+        <section class="info">
+            <div class="about">
+                <h3>Get to know me</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing elit pellentesque habitant morbi tristique senectus et. Convallis tellus id interdum velit laoreet id donec.</p>
+                <a href="about.html"><button>Show More</button></a>
+            </div>
+            <div class="follow">
+                <h3>Follow me</h3>
+                <div class="icons">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <nav class="footer_menu">
@@ -69,6 +97,12 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <a href="index.html">
+            <div class="logo-footer">
+                <h4>BITE by ME</h4>
+                <img src="images/cake.png" alt="Bite by me logo" class="logo_img">
+            </div>
+        </a>
     </footer>
     
 </body>
