--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             </div>
         </a>
     </footer>
-    
+    <script src="js/components/message.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
