--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <header>
         <nav class="menu">
             <ul>
-                <li><a href="about.html">About us</a></li>
+                <li><a href="about.html" class="active">About us</a></li>
                 <li><a href="recipes-list.html">Recipes</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -59,7 +59,7 @@
     <footer>
         <nav class="footer_menu">
             <ul>
-                <li><a href="about.html">About us</a></li>
+                <li><a href="about.html" class="active">About us</a></li>
                 <li><a href="recipes-list.html">Recipes</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
