--- a/recipes-list.html
+++ b/recipes-list.html
@@ -28,7 +28,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="recipes-list.html">Recipes</a></li>
+                <li><a href="recipes-list.html" class="active">Recipes</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -49,7 +49,7 @@
         <nav class="footer_menu">
             <ul>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="recipes-list.html">Recipes</a></li>
+                <li><a href="recipes-list.html" class="active">Recipes</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
