added content to recipes page and recipe-specific page
started on the styling for those 2 pages
called featured api for the carousel

--- a/recipe.html
+++ b/recipe.html
@@ -44,6 +44,10 @@
             <h2>IT'S SOMEONE'S BIRTHDAY SOMEWHERE</h2>
             </a>
         </div>
+        <section class="recipe_container">
+            <a href="recipes-list.html">Back to recipes!</a>
+            <div class="loading"></div>
+        </section>
     </main>
     <footer>
         <nav class="footer_menu">
@@ -60,6 +64,7 @@
             </div>
         </a>
     </footer>
-    
+    <script src="js/components/message.js"></script>
+    <script src="js/recipe-specific.js" type="module"></script>
 </body>
 </html>
