--- a/recipes-list.html
+++ b/recipes-list.html
@@ -44,6 +44,12 @@
             <h2>IT'S SOMEONE'S BIRTHDAY SOMEWHERE</h2>
             </a>
         </div>
+        <section class="recipes_container">
+            <div class="recipes_list">
+                <div class="loading"></div>
+            </div>
+            <button>Show More</button>
+        </section>
     </main>
     <footer>
         <nav class="footer_menu">
@@ -60,6 +66,7 @@
             </div>
         </a>
     </footer>
-    
+    <script src="js/components/message.js"></script>
+    <script src="js/recipes.js" type="module"></script>
 </body>
 </html>
