added modal to image on recipe page

--- a/recipe.html
+++ b/recipe.html
@@ -45,8 +45,18 @@
             </a>
         </div>
         <section class="recipe_container">
-            <a href="recipes-list.html">Back to recipes!</a>
+            <div class="above_post">
+                <a href="recipes-list.html" class="go-back">Back to recipes!</a>
+                <p></p>
+            </div>
             <div class="loading"></div>
+            <!-- <div class="recipe">
+                <div class="modal">
+                    <img class="modal_img">
+                </div>
+                    <h3></h3>
+                    <div clss="content"></div>
+            </div> -->
         </section>
     </main>
     <footer>
