--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Joti+One&family=Quicksand&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/d2a33a8755.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css" />
-    <!-- Hotjar Tracking Code for my site -->
+    <!-- Hotjar Tracking Code for my website -->
     <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:3487422,hjsv:6};
+            h._hjSettings={hjid:3504482,hjsv:6};
             a=o.getElementsByTagName('head')[0];
             r=o.createElement('script');r.async=1;
             r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
