made the show more button functional on recipes-list page

--- a/recipes-list.html
+++ b/recipes-list.html
@@ -48,7 +48,7 @@
             <div class="recipes_list">
                 <div class="loading"></div>
             </div>
-            <button>Show More</button>
+            <button class="show-more">Show More</button>
         </section>
     </main>
     <footer>
