cleaned up css and added bars to the nav on all the pages

--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,12 @@
 </head>
 <body>
     <header>
+        <i class="fa-solid fa-bars"></i>
         <nav class="menu">
             <ul>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="recipes-list.html">Recipes</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <i class="fa-solid fa-magnifying-glass"></i>
