--- a/recipe.html
+++ b/recipe.html
@@ -25,6 +25,7 @@
 </head>
 <body>
     <header>
+        <i class="fa-solid fa-bars"></i>
         <nav class="menu">
             <ul>
                 <li><a href="about.html">About us</a></li>
