added active class to nav

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="recipes-list.html">Recipes</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
         <i class="fa-solid fa-magnifying-glass"></i>
