--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <i class="fa-solid fa-bars"></i>
         <nav class="menu">
             <ul>
-                <li><a href="about.html">About us</a></li>
+                <li><a href="about.html" class="active">About us</a></li>
                 <li><a href="recipes-list.html">Recipes</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
