made the hamburger menu
started on responsivnes

--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,7 @@
             </div>
         </a>
     </footer>
+    <script src="js/components/navigation.js"></script>
     <script src="js/contact.js"></script>
 </body>
 </html>
