--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Josefin+Sans&family=Joti+One&family=Quicksand&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/d2a33a8755.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- <link rel="stylesheet" href="css/imports/media.css"> -->
     <!-- Hotjar Tracking Code for my website -->
     <script>
         (function(h,o,t,j,a,r){
@@ -119,6 +120,7 @@
             </div>
         </a>
     </footer>
+    <script src="js/components/navigation.js"></script>
     <script src="js/carousel.js"></script>
     <script src="js/components/message.js"></script>
     <script src="js/index.js" type="module"></script>
