--- a/recipe.html
+++ b/recipe.html
@@ -75,6 +75,7 @@
             </div>
         </a>
     </footer>
+    <script src="js/components/navigation.js"></script>
     <script src="js/components/message.js"></script>
     <script src="js/recipe-specific.js" type="module"></script>
 </body>
