--- a/recipes-list.html
+++ b/recipes-list.html
@@ -67,6 +67,7 @@
             </div>
         </a>
     </footer>
+    <script src="js/components/navigation.js"></script>
     <script src="js/components/message.js"></script>
     <script src="js/recipes.js" type="module"></script>
 </body>
