finished making the website responsive

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                         <div id="subjectError"></div>
                     </div>
                 </div>
-                <div class="column">
+                <div class="column message">
                     <div class="input">
                         <label>Message</label>
                         <textarea name="message" id="message"></textarea>
