added for to labels

--- a/contact.html
+++ b/contact.html
@@ -50,24 +50,24 @@
             <form>
                 <div class="column">
                     <div class="input">
-                        <label>Name</label>
+                        <label for="name">Name</label>
                         <input name="name" id="name"/>
                         <div id="nameError"></div>
                     </div>
                     <div class="input">
-                        <label>Email address</label>
+                        <label for="email">Email address</label>
                         <input name="email" id="email"/>
                         <div id="emailError"></div>
                     </div>
                     <div class="input">
-                        <label>Subject</label>
+                        <label for="subject">Subject</label>
                         <input name="subject" id="subject"/>
                         <div id="subjectError"></div>
                     </div>
                 </div>
                 <div class="column message">
                     <div class="input">
-                        <label>Message</label>
+                        <label for="message">Message</label>
                         <textarea name="message" id="message"></textarea>
                         <div id="messageError"></div>
                     </div>
